docs(create tags): add docs for create tags route
